(lang dune 2.0)
(name ez-compat)
(allow_approximate_merlin)

(generate_opam_files true)

(source (github ocamlpro/ez-compat))
(license LGPL-2.1-or-later)
(authors
 "Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>"
)
(maintainers "Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>")

(package
 (name ez-compat)
 (synopsis "Library to ease backward compatibility with OCaml versions")
 (documentation "https://ocamlpro.github.io/ez-compat/doc")
 (depends
   (base-unix (>= 0.0))
 )
)
