(lang dune 2.0)
(name ez-config)
(allow_approximate_merlin)

(generate_opam_files true)

(source (github ocamlpro/ez-config))
(license LGPL-2.1-or-later)
(authors
 "Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>"
)
(maintainers "Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>")

(package
 (name ez-config)
 (synopsis "Easy management of configuration files")
 (documentation "https://ocamlpro.github.io/ez-config/doc")
 (depends
  (ez-file (>= 1.0.0)))
  )
