(lang dune 2.0)
(name ez-file)
(allow_approximate_merlin)

(generate_opam_files true)

(source (github ocamlpro/ez-file))
(license LGPL-2.1-or-later)
(authors
 "Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>"
)
(maintainers "Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>")

(package
 (name ez-file)
 (synopsis "Easy file manipulation")
 (documentation "https://ocamlpro.github.io/ez-file/doc")
 (depends
  (ez-compat (>= 1.0.0))
  (ez-stdlib (>= 1.0.0))
  (re (>= 1.0))
  )
  )
