(lang dune 2.0)
(name ez-stdlib)
(allow_approximate_merlin)

(generate_opam_files true)

(source (github ocamlpro/ez-stdlib))
(license LGPL-2.1-or-later)
(authors
 "Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>"
)
(maintainers "Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>")

(package
 (name ez-stdlib)
 (synopsis "extension of the stdlib")
 (documentation "https://ocamlpro.github.io/ez-stdlib/doc")
 (depends
  (ez-compat (>= 1.0.0))
  )
  )
